# search_federation

./: Cargo.toml  README.md  docker-compose.yml
src/: lib.rs  main.rs  opensearch.rs  repl.rs  rules.rs  seed.rs  udf.rs
tests/: test_opensearch.rs
